# app_asset_management

./: .gitignore  README.md  app.py  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
modules/: config.py
modules/AI/: GPT.py
modules/GUI/: home.py  ui_components.py
src/: calculs.py  plots.py
src/GUI/: home.py
